--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
               <p>Vulnerability assessment and threat detection</p>
             </div>
           </div>
-          <a href="https://drive.google.com/file/d/1GX0pXoxokZglyAGIyo6vZklKH0YckLK-/view?usp=sharing" class="btn btn-outline">Download CV <i class="fas fa-download"></i></a>
+          <a href="https://github.com/PraveenaShanmugavel/Portfolio/blob/main/Resume/PRAVEENA%20S%20Resume.pdf" class="btn btn-outline">Download CV <i class="fas fa-download"></i></a>
         </div>
       </div>
     </div>
