--- a/index.html
+++ b/index.html
@@ -130,7 +130,9 @@
               <p>Vulnerability assessment and threat detection</p>
             </div>
           </div>
-          <a href="https://github.com/PraveenaShanmugavel/Portfolio/blob/main/Resume/PRAVEENA%20S%20Resume.pdf" class="btn btn-outline">Download CV <i class="fas fa-download"></i></a>
+          <a href="/Resume/PRAVEENA S Resume.pdf" class="btn btn-primary download-btn" download>
+            <i class="fas fa-download me"></i> Download Resume
+          </a>
         </div>
       </div>
     </div>
