--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
               <p>Vulnerability assessment and threat detection</p>
             </div>
           </div>
-          <a href="/Resume/PRAVEENA S Resume.pdf" class="btn btn-primary download-btn" download>
+          <a href="/Resume/PRAVEENA_S_Resume.pdf" class="btn btn-primary download-btn" download>
             <i class="fas fa-download me"></i> Download Resume
           </a>
         </div>
