--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <section id="hero">
     <div class="hero-container">
       <div class="hero-left" data-aos="fade-right" data-aos-duration="1000">
-        <img src="/Image/Profile.jpg" alt="Praveena Photo" class="profile-pic" />
+        <img src="./Image/Profile.jpg" alt="Praveena Photo" class="profile-pic" />
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/praveena-cys/" target="_blank" class="social-icon"><i class="fab fa-linkedin"></i></a>
           <a href="mailto:praveenashan862@gmail.com" class="social-icon"><i class="fas fa-envelope"></i></a>
@@ -98,7 +98,7 @@
       <div class="about-content">
         <div class="about-image" data-aos="fade-right" data-aos-delay="200">
           <div class="image-frame">
-            <img src="/Image/Profile.jpg" alt="Praveena working on cybersecurity" />
+            <img src="./Image/Profile.jpg" alt="Praveena working on cybersecurity" />
           </div>
           <div class="experience-badge">
             <span class="number">1+</span>
