--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
               <p>Vulnerability assessment and threat detection</p>
             </div>
           </div>
-          <a href="/Resume/PRAVEENA_S_Resume.pdf" class="btn btn-primary download-btn" download>
+          <a href="./Resume/PRAVEENA_S_Resume.pdf" class="btn btn-primary download-btn" download>
             <i class="fas fa-download me"></i> Download Resume
           </a>
         </div>
@@ -449,7 +449,7 @@
         <div class="projects-grid">
           <div class="project-card" data-category="forensic" data-aos="fade-up" data-aos-delay="100">
             <div class="project-img">
-              <img src="/Image/Temp.png" alt="Forensic Recovery Tool">
+              <img src="./Image/Temp.png" alt="Forensic Recovery Tool">
               <div class="project-overlay">
                 <div class="project-links">
                   <a href="#" class="project-link"><i class="fas fa-link"></i></a>
@@ -483,7 +483,7 @@
           
           <div class="project-card" data-category="network" data-aos="fade-up" data-aos-delay="200">
             <div class="project-img">
-              <img src="/Image/Wifi.png" alt="Wi-Fi Security Monitor">
+              <img src="./Image/Wifi.png" alt="Wi-Fi Security Monitor">
               <div class="project-overlay">
                 <div class="project-links">
                   <a href="#" class="project-link"><i class="fas fa-link"></i></a>
@@ -518,7 +518,7 @@
           
           <div class="project-card" data-category="security" data-aos="fade-up" data-aos-delay="300">
             <div class="project-img">
-              <img src="/Image/VAPT.png" alt="VAPT Simulation">
+              <img src="./Image/VAPT.png" alt="VAPT Simulation">
               <div class="project-overlay">
                 <div class="project-links">
                   <a href="#" class="project-link"><i class="fas fa-link"></i></a>
