--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Praveena S</title>
     <!-- Favicon -->
-    <link rel="icon" href="/Image/favicon/favicon.ico" type="image/x-icon" />
-    <link rel="shortcut icon" href="/Image/favicon/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="./Image/favicon/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="./Image/favicon/favicon.ico" type="image/x-icon" />
     <!-- Apple Touch Icon (for iOS devices) -->
     <link rel="apple-touch-icon" href="apple-touch-icon.png" />
     <!-- CSS -->
